Add estimated output size label Add 540p res preset

--- a/win/CS/HandBrakeWPF/Views/VideoView.xaml
+++ b/win/CS/HandBrakeWPF/Views/VideoView.xaml
@@ -113,6 +113,10 @@
                               ToolTip="{x:Static Properties:ResourcesTooltips.Video_TurboAnalysisPass}" />
                 </StackPanel>
 
+                <StackPanel Orientation="Horizontal" Margin="30,0,0,0">
+                    <TextBlock Text="{Binding EstSizeLabel}" />
+                </StackPanel>
+
             </StackPanel>
 
             <!-- H264 settings -->
